--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -6,22 +6,21 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
     <body style="padding:5%;">
-        <h1>Logical Picture | One with nature</h1>
+        <h1>Logical Picture | {{ title }}</h1>
         <h6>Thoughts on Wildlife, Meditation, and Crafting</h6>
 
         <div class="container" style="width:50%;margin-left:-1.5%;">
           <nav class="navbar navbar-light ms-auto">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Home</a>
-                <a class="navbar-brand" href="/blog/">Blog</a>
-                <a class="navbar-brand" href="/about/">About</a>
+              {%- for entry in collections.all | eleventyNavigation %}
+                <a class="navbar-brand" href="{{ entry.url }}">{{ entry.title }}</a>
+              {%- endfor %}
             </div>
           </nav>
         </div>
 
         <div style="">
-          <p>The feeling you can get from bird watching and meditation are basically the same. It's about not being separate. As Sengcan said, no inside no outside no in-between</p>
-
+          {{ content | safe }}
         </div>
     </body>
     <footer>
