--- a/src/blog.njk
+++ b/src/blog.njk
@@ -1,8 +1,10 @@
 ---
 layout: layout.njk
-title: Chris' Web Blogge
+title: Blog
+eleventyNavigation:
+  key: Blog
+  order: 1
 ---
-
 {%- for post in collections.posts %}
     <h2><a href="{{ post.url }}">{{ post.data.title }}</a></h2>
 {%- endfor %}
