--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -4,11 +4,18 @@
         <meta charset="utf-8">
         <title>Logical Picture</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="/assets/style/style.css"></link>
     </head>
-    <body style="padding:5%;">
-        <h1>Logical Picture | {{ title }}</h1>
-        <h6>Thoughts on Wildlife, Meditation, and Crafting</h6>
 
+    <header style="background-image:url('/assets/img/forest.jpg');min-height:300px;margin:0;">
+      <h1><a href="/" style="text-decoration:none;color:black;">Bog Flowers</a> | {{ title }}</h1>
+      <h6>Thoughts on Wildlife, Meditation, and Crafting</h6>
+    </header>
+   
+
+    <nbsp/>
+
+    <body style="">
         <div class="container" style="width:50%;margin-left:-1.5%;">
           <nav class="navbar navbar-light ms-auto">
             <div class="container-fluid">
@@ -19,12 +26,12 @@
           </nav>
         </div>
 
-        <div style="">
+        <div style="padding:5%;">
           {{ content | safe }}
         </div>
     </body>
-    <footer>
-      <div style="min-height:100px;"></div>
-    <p>By Chris L.</p><p> <a href="/">Back to Home</a></p>
+    <div style="min-height:100px;"></div>
+    <footer style="padding:5%;">
+    <p>By Chris L.</p>  
     </footer>
 </html>
