--- a/src/index.njk
+++ b/src/index.njk
@@ -12,7 +12,7 @@ eleventyNavigation:
   Most recent: 
   <br/>
   <br/>
-  <h4><a href="{{ recent.url}}">{{ recent.data.title}}</a></h4>
+  <h5>Most recent: <a href="{{ recent.url}}">{{ recent.data.title}}</a></h5>
   <p>{{recent.content | safe }}</p>
 
   <a href="/blog">See more posts</a>
