--- a/src/about.njk
+++ b/src/about.njk
@@ -5,4 +5,4 @@ eleventyNavigation:
   key: About
   order: 2
 ---
-<p>This site is coded and written by Chris Lizama. I like birds, Zen, and knitting</p>
+<p>This site is coded and written by me, Chris Lizama. All pictures were taken by me too. I like birds, Zen, and knitting</p>
