--- a/src/about.njk
+++ b/src/about.njk
@@ -6,3 +6,4 @@ eleventyNavigation:
   order: 2
 ---
 <p>This site is coded and written by me, Chris Lizama. All pictures were taken by me too. I like birds, Zen, and knitting</p>
+<p>I coded this site myself using the 11ty framework. It's my first project with 11ty but it was a joy to use. In my day job I mostly use Python with Django</p>
