add link to rss feed

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -33,6 +33,6 @@
     </body>
     <div style="min-height:100px;"></div>
     <footer style="padding:5%;">
-    <p>All words and pictures by Chris L.</p>  
+    <p>All words and pictures by Chris L. <a href="/feed">RSS Feed</a></p>  
     </footer>
 </html>
