--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -16,8 +16,8 @@
 
     <nbsp/>
 
-    <body style="">
-        <div class="container" style="width:50%;margin-left:-1.5%;">
+    <body>
+        <div class="container" id="main-body-container">
           <nav class="navbar navbar-light ms-auto">
             <div class="container-fluid">
               {%- for entry in collections.all | eleventyNavigation %}
@@ -33,6 +33,6 @@
     </body>
     <div style="min-height:100px;"></div>
     <footer style="padding:5%;">
-    <p>All words and pictures by Chris L. <a href="/feed">RSS Feed</a></p>  
+    <p>All words and pictures by Chris Lizama <a href="/feed">RSS Feed</a></p>  
     </footer>
 </html>
