--- a/src/feed.njk
+++ b/src/feed.njk
@@ -1,6 +1,6 @@
 ---
 # Metadata comes from _data/metadata.json
-permalink: "https://bogflowers.com/feed"
+permalink: "feed.xml"
 eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
