fix title and subtitle

--- a/src/feed.njk
+++ b/src/feed.njk
@@ -5,8 +5,8 @@ eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
-  <title>{{ metadata.title }}</title>
-  <subtitle>{{ metadata.feed.subtitle }}</subtitle>
+  <title>Bog Flowers</title>
+  <subtitle>Thoughts on Wildlife, Meditation, and Crafting</subtitle>
   <link href="https://bogflowers.com/feed.xml" rel="self"/>
   <link href="https://bogflowers.com"/>
   <updated>{{ collections.posts | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
