add 1 post and 1 draft

--- a/src/feed.njk
+++ b/src/feed.njk
@@ -6,7 +6,7 @@ eleventyExcludeFromCollections: true
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
   <title>Bog Flowers</title>
-  <subtitle>Thoughts on Wildlife, Meditation, and Crafting</subtitle>
+  <subtitle>Thoughts on Wildlife and Meditation</subtitle>
   <link href="https://bogflowers.com/feed.xml" rel="self"/>
   <link href="https://bogflowers.com"/>
   <updated>{{ collections.posts | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
