--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -10,7 +10,7 @@
     <header style="background-image:url('/assets/img/forest.jpg');min-height:300px;margin:0;">
       {# <h1><a href="/" style="text-decoration:none;color:black;">Bog Flowers</a> | {{ title }}</h1> #}
       <h1><a href="/" style="text-decoration:none;color:black;">Bog Flowers</a> </h1>
-      <h6>Thoughts on Wildlife, Meditation, and Crafting</h6>
+      <h6>Thoughts on Wildlife and Meditation</h6>
     </header>
    
 
